<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="28dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    android:paddingBottom="28dp"
    tools:context=".LoginActivity"
    tools:ignore="UselessParent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cv"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"

         />

    <TextView
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"

        android:textColor="@color/textColor"
        android:textSize="25sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginLeft="41dp"
        app:cardCornerRadius="8dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:paddingTop="21dp"
        android:layout_marginRight="41dp"
        android:paddingBottom="21dp"
        app:cardElevation="23dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/textColor"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/horizontal_20"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/login_email"
                 />

            <EditText
                android:id="@+id/email"
                android:paddingBottom="@dimen/vertical_margin_8"
                android:fontFamily="sans-serif-light"
                android:gravity="center|start|bottom"
                android:inputType="textEmailAddress"
                android:maxLength="51"

                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_bg_curved_grey"
                android:cursorVisible="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:minHeight="48dp"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/vertical_margin_8"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:textColor="@color/black_"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:textColor="@color/textColor"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:text="@string/login_password"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/vertical_margin_8"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:background="@drawable/input_bg_curved_grey"
                android:cursorVisible="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:inputType="textPassword"
                android:maxLength="50"
                android:paddingBottom="@dimen/vertical_margin_8"
                android:textColor="@color/black_"
                android:gravity="center|start|bottom"
                android:textSize="18sp" />


            <Button
                android:textColor="@color/white"
                android:textSize="18sp"
                android:onClick="onLogin"
                android:text="Login"
                android:textAllCaps="false"
                android:background="@color/material_green_600"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                 />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>