<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@drawable/dialog_bg_curved"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/white"
        android:text="@string/work_experience" />

    <LinearLayout
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/horizontal_20"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="Company Name"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:gravity="center|start|bottom"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:minHeight="48dp"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input_bg_curved_grey"
            android:cursorVisible="true"
            android:fontFamily="sans-serif-light"

            android:paddingTop="@dimen/vertical_margin_8"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/vertical_margin_8"
            android:textColor="@color/black_"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/horizontal_20"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="Position title"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"

            android:textSize="14sp" />

        <EditText
            android:id="@+id/position"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"

            android:layout_marginEnd="20dp"
            android:background="@drawable/input_bg_curved_grey"
            android:cursorVisible="true"
            android:fontFamily="sans-serif-light"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/vertical_margin_8"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/vertical_margin_8"
            android:gravity="center|start|bottom"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:minHeight="48dp"

            android:textColor="@color/black_"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/horizontal_20"
            android:textColor="@color/white"
            android:text="Experience duration"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/duration"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input_bg_curved_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"

            android:cursorVisible="true"
            android:fontFamily="sans-serif-light"
            android:gravity="center|start|bottom"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/vertical_margin_8"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/vertical_margin_8"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:minHeight="48dp"

            android:textColor="@color/black_"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:gravity="end"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/add" />
    </LinearLayout>

</LinearLayout>